app/assets/stylesheets/components/study.scss
.study-sidebar {
background-color: #243043;
box-sizing: border-box;
display: flex;
flex-direction: column;
height: 100vh;
max-height: 100vh;
min-height: 660px;
min-width: 200px;
padding: 30px 30px 24px;
width: 340px;
z-index: 1000;
}

.study {
  display: flex;
}
.card {
  height: 75%;
}

.card-question {
  height: 100%;
}

.card-question-text {
  padding: 24px;
  margin: 24px;
  display: flex;
  flex-direction: column;
  box-shadow: 0 0 2px 4px hsla(0,0%,39%,.25);
  color: #333;
  border-bottom-color: #ff8a47;
  border-bottom: 6px solid #ff8a47;
  // justify-content: flex-start;
  font-size: 24px;
  height: calc(100% - 103px);
  position: relative;
}

.card-face-header {
  font-size: 24px;
  font-weight: 300;
  display: flex;
  justify-content: space-between;
  position: relative;
  width: calc(100% - 48px);
  height: 32px;
  color: #bbb;

}

.question-text {
  margin-top: auto;
  margin-bottom: auto;
  padding: 8px 36px 0;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.reveal-button {
  height: calc(10vh + 18px);
  width: calc(100% - 48px);
  position: relative;
  font-size: 24px;
  cursor: pointer;
  background-color: rgb(255, 138, 71);
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 18px 24px 0px 24px;

}

.outer {
  width: 100%;
}

.card-container-outer {
  height: 75%;
}

.scores ul {
  display: flex;
  justify-content: space-evenly;
  margin: 18px 24px 0;
  font-size: 24px;
  height: calc(10vh + 18px);
  align-items: center;
  cursor: pointer;
}

.scores li {
  width: 100%;
  height: 100%;
  vertical-align: middle;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
}

.scores li:first-child{
  background-color: #aa0080;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.scores li:nth-child(2){
  background-color: #ff8a47;
}

.scores li:nth-child(3){
  background-color: #ffdd00;
}

.scores li:nth-child(4){
  background-color: #7fae2e;
}

.scores li:nth-child(5){
  background-color: #00a8d7;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.small {
  position: relative;
}

.small small {
  position: relative;
  top: 15px;
  left: -30px;
  font-size: 12px;
  font-weight: 300;
  color: white;
}

.how-well {
  text-align: center;
  font-size: 14px;
  color: #333;
}

.placeholder {
  font-size: 14px;
  text-align: center;
  color: transparent;
}


//THE CHEVRON CSS IS FROM https://css-tricks.com/the-shapes-of-css/#chevron-shape-via-anthony-ticknor
.chevron {
  text-align: center;
  padding: 12px;
  margin-bottom: 11px;
  height: 8px;
  width: 120px;
  transform: rotate(180deg);
}
.chevron:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 51%;
  background: #1c2631;
  transform: skew(0deg, 12deg);
}
.chevron:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 50%;
  background: #1c2631;
  transform: skew(0deg, -12deg);
}

.chevron-ul {
  align-items: center;
  display: flex;
  height: 100%;
  flex-direction: column-reverse;
  justify-content: space-evenly;
  margin: 24px 0;
  min-height: 220px;
}
.chevron-container {
    display: flex;
    flex: 1;
    min-height: 0;
    box-sizing: border-box;
    justify-content: space-evenly;
    align-items: center;
}

.deck-label {
  color: #888;
  font-size: 14px;
  margin-right: 8px;
}

.header-deck-name {
  color: #555;
  font-weight: 600;
  margin-right: 8px;
}

.card-and-table-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 26px;
}

.see-all-cards {
  font-size: 13px;
  color: rgb(40,165,220);
  padding: 5px;
  height: 29px;
  box-sizing: border-box;
  width: 220px;
  text-align: center;
  font-weight: 400;
  display: flex;
  align-items: center;
}

.see-all-cards span {
  font-size: 24px;
}

.see-all-cards:hover {
  background-color: rgba(0,0,0,.1);
  border-radius: 36px;
}

.glasses {
  display: flex;
  align-items: center;
  margin-right: 10px;
  margin-left: 10px;
}

.chevron.score-1:before {
  background:#aa0080;
}
.chevron.score-1:after {
  background:#aa0080;
}

.chevron.score-2:before {
  background:#ff8a47;
}
.chevron.score-2:after {
  background:#ff8a47;
}

.chevron.score-3:before {
  background:#ffdd00;
}
.chevron.score-3:after {
  background:#ffdd00;
}

.chevron.score-4:before {
  background:#7fae2e;
}
.chevron.score-4:after {
  background:#7fae2e;
}

.chevron.score-5:before {
  background:#00a8d7;
}
.chevron.score-5:after {
  background:#00a8d7;
}



.mastery-circles {
  width: 30vh;
  height: 30vh;
  position: relative;
}
.mastery-circle {
  width: 30vh;
  height: 30vh;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.mastery-value {
  position: absolute;
  top: 0;
  text-align: center;
  display: flex;
  flex-direction: column;
  height: 25vh;
  width: 25vh;
  justify-content: center;
  margin: 2.5vh;
}

.value-data {
  font-size: 6.5vh;
  font-weight: 600;
  letter-spacing: 1px;
  color: #fff;
}

.value-label {
  color: hsla(0,0%,100%,.6);
  font-size: 2vh;
  font-weight: 100;
  margin-top: 5px;
  text-transform: uppercase;
}

.circle-action-buttons {
  display: flex;
  justify-content: flex-end;
  font-size: 14px;
  align-items: center;
}


.svg-circles {
    display: block;
    max-width: 100%;
    transform: rotate(-90deg);
}

.svg-circle-bg {
    fill: none;
}

.svg-circle {
    fill: none;
}
.svg-circle-text {
   font-size: 2rem;
   transform: rotate(90deg);
    text-anchor: middle;
    fill: #fff;
    font-weight: bold;
}

.svg-circle-mastery {
  color: hsla(0,0%,100%,.6);
  font-size: 2vh;
  font-weight: 100;
  text-align: center;
}

.checkpoint-title {
  font-size: 8vh;
  font-weight: 400;
  color:rgb(255, 255, 255)
}

.fullscreen-checkpoint {
  color: hsla(0,0%,100%,.7);
  font-size: 3.5vh;
  font-weight: 300;
  text-align: center;
}

.checkpoint-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 400px;
  height: 75vh;
  justify-content: space-between;
}

.circle-pill-button{
  margin: 0 18px;
  background-color: #28a5dc;
  font-size: 2vh;
  font-weight: 400;
  height: 7vh;
  max-width: 185px;
  width: 22vh;
  color: #fff;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  text-align: center;
  border-radius: 8vh;
  border: none;
  padding: 0 4vh;
  font-family: Open Sans, sans-serif;
  cursor: pointer;
  box-sizing: border-box;
}

.circle-pill-button:hover {
  background-color: #54b7e3;
}

